# HW_Programming

./: .gitignore  Z1.cpp  Z2.cpp  Z3.cpp
AiSD/Sem_2/Kursach/: .kateproject  CMakeLists.txt  compile_commands.json
AiSD/Sem_2/Kursach/src/: Header.h  Source.cpp
AiSD/Sem_2/Kursach/src/kdtree/: kdtree.h  kdtree.hpp
AiSD/Sem_2/Kursach/src/object/: object.cpp  object.h
AiSD/Sem_2/Kursach/src/object/circle/: circle.cpp  circle.h
AiSD/Sem_2/Kursach/src/object/line/: line.cpp  line.h
AiSD/Sem_2/Kursach/src/object/rectangle/: rectangle.cpp  rectangle.h
AiSD/Sem_2/Kursach/src/routes/fast_route/: fast_route.cpp  fast_route.h
AiSD/Sem_2/Kursach/src/routes/route/: route.cpp  route.h
AiSD/Sem_2/Kursach/src/routes/route_base/: route_base.cpp  route_base.h
AiSD/Sem_2/Kursach/src/routes/route_base/planer/: planer.h  (+1 more)
AiSD/Sem_2/Kursach/src/routes/routez/: routez.cpp  routez.h
AiSD/Sem_2/Kursach/src/rrt_lang/lexer/: lexer.cpp  lexer.h
AiSD/Sem_2/Kursach/src/rrt_lang/parser/: parser.cpp  parser.h
AiSD/Sem_2/Kursach/src/rrt_lang/runtime/: runtime.cpp  runtime.h
AiSD/Sem_2/Kursach/src/space/: space.cpp  space.h  world.h
AiSD/Sem_2/Kursach/src/space/collision_checker/: collision_checker.cpp  collision_checker.h
AiSD/Sem_2/Kursach/src/window/: window.cpp  window.h
AiSD/Sem_2/Kursach/test/: RRT  auto_coster.sh  auto_steper.sh
AiSD/Sem_2/Kursach/test/test_map/: ai_map0.rrt  ai_map1.rrt  ai_map12.rrt  ai_map2.rrt  ai_map3.rrt
Programming/2/practice/2/: CMakeLists.txt
Programming/2/practice/2/resources/: resources.gresource.xml
Programming/2/practice/2/resources/ui/: builder.ui
Programming/2/practice/2/src/: main.c  main_window.c  main_window.h  tree.c  tree.h
(+486 files in other folders)
